fixed the modal issue so that the call codal button is not deactivated, and fixed all of the spacing on the sidebar animations

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,7 +44,7 @@ span {
   max-width: 90px;
   background: #7a6eb8;
   color: #fff;
-  transition: all 0.7s;
+  transition: all 0.3s;
 }
 
 #sidebar.active {
@@ -62,12 +62,12 @@ span {
   display: none;
 }
 
-#sidebar.active .sidebar-header h3,
+/* #sidebar.active .sidebar-header h3,
 #sidebar.active #profileImage,
 #sidebar.active #jobTitle,
 #sidebar.active #brandName {
   display: block;
-}
+} */
 
 #sidebar.active #jobTitle,
 #sidebar.active h3 {
@@ -81,12 +81,12 @@ span {
 #sidebar ul li a i {
   text-align: center;
 }
-
+/* 
 #sidebar.active ul li a {
   padding: 20px 10px;
   text-align: center;
   font-size: 0.85em;
-}
+} */
 
 #sidebar ul li a i {
   margin-right: 0;
@@ -102,23 +102,23 @@ span {
   margin-bottom: 5px;
 }
 
-#sidebar .dropdown-toggle::after {
+/* #sidebar .dropdown-toggle::after {
   top: auto;
   bottom: 10px;
   right: 50%;
   -webkit-transform: translateX(50%);
   -ms-transform: translateX(50%);
   transform: translateX(50%);
-}
+} */
 
 #sidebar .sidebar-header {
-  padding: 10%;
+  padding: 20%;
   background: #5b528a;
   margin-bottom: 3%;
 }
 
 #sidebar .logo {
-  padding: 10%;
+  /* padding: 20%; */
   background: #534366;
 }
 
@@ -143,18 +143,18 @@ span {
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  margin-left: 30%;
+  /* margin-left: 20%; */
 }
 
 .content {
   width: 100%;
   padding: 20px;
   min-height: 100vh;
-  transition: all 0.3s;
+  transition: all 0.4s;
 }
 
 #brandName {
-  font-size: xx-large;
+  font-size: x-large;
 }
 
 #sidebar .btnName {
@@ -360,4 +360,51 @@ label:focus input::placeholder {
   content: "";
   clear: both;
   display: table;
+}
+
+/* ---------------------------------------------------
+    DASHBOARD STYLE
+----------------------------------------------------- */
+
+#grad1 {
+  background-color: rgb(73, 101, 225);
+  background-image: linear-gradient(
+    to left bottom,
+    rgb(73, 101, 225),
+    rgb(36, 224, 206)
+  );
+}
+
+#grad2 {
+  background-color: rgb(52, 167, 166);
+  background-image: linear-gradient(
+    to left bottom,
+    rgb(52, 167, 166),
+    rgb(58, 225, 133)
+  );
+}
+
+#grad3 {
+  background-color: rgb(252, 90, 101);
+  background-image: linear-gradient(
+    to left bottom,
+    rgb(252, 90, 101),
+    rgb(239, 50, 142)
+  );
+}
+
+#grad4 {
+  background-color: rgb(248, 113, 69);
+  background-image: linear-gradient(
+    to left bottom,
+    rgb(248, 113, 69),
+    rgb(255, 210, 51)
+  );
+}
+
+.analytics {
+  border: none;
+  border-radius: 2%;
+  max-width: 22rem;
+  height: 150px;
 }
